# cmeg_demo

./: .gitignore  00-CMEG-Demo-Intro.py  01-DLT-Medallion.py  02-Features-and-Vectors.py  02_dlt_medallion.py  03-Train-and-Register.py  03_features_and_vectors.py  04-Serve-and-Explain.py  04_train_and_register.py  05-Monitor-and-Govern.py  05_serve_and_explain.py  06-Genie-Space.py  06_monitor_and_govern.py  07_genie_space.py  INSTALL.py  README.md  RUNME.py  config.py  databricks.yml  pyproject.toml
.github/workflows/: validate.yml
_install/: install.py  uninstall.py
_resources/: 00-setup.py  01-generate-data.py  02-create-resources.py  99-uninstall.py
cmeg-wo-inst/: 00_setup_and_data.py  01_dlt_medallion.py  02_features_and_vectors.py  03_train_and_register.py  04_serve_and_explain.py  05_monitor_and_govern.py  06_genie_space.py  config.py
cmeg-wo-inst/_resources/: 00-setup.py  _dlt_pipeline.py
cmeg-wo-inst/lib/cmeg/: data_gen.py  features.py  monitoring.py  serving.py
docs/superpowers/plans/: 2026-06-02-cmeg-rec-demo.md
docs/superpowers/specs/: 2026-06-02-cmeg-rec-demo-design.md
lib/cmeg/: companion.py  config.py  features.py  genai.py  governance.py  models.py  state.py
narrative/: 00_START_HERE.py  01_setup_and_data.py  02_dlt_medallion.py  03_features_and_vectors.py  04_train_and_register.py  05_serve_and_explain.py  06_monitor_and_govern.py  07_genie_space.py  _dlt_pipeline_definition.py
resources/: jobs.yml  pipelines.yml  schemas.yml
tests/: test_companion.py  test_config.py  test_data_gen.py  test_state.py
