[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cmeg"
version = "0.1.0"
description = "CMEG content recommendation demo helpers"
requires-python = ">=3.10"
dependencies = [
  "databricks-sdk>=0.30.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]

[tool.setuptools.packages.find]
where = ["lib"]
include = ["cmeg*"]
